# Resume-Checker

./: .gitignore  README.md  app.py  resume_checker.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: processing.py
backend/app/core/: config.py
backend/app/schemas/: documents.py
backend/app/services/: pipeline.py
backend/app/services/document_processing/: base.py  extractor_factory.py  normalizer.py
backend/app/services/document_processing/extractors/: docx_extractor.py  pdf_extractor.py  txt_extractor.py
backend/app/services/nlp/: features.py
backend/app/services/preprocessing/: cleaner.py
backend/docs/: architecture.md
tests/: test_resume_checker.py
