[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-matching-backend"
version = "0.1.0"
description = "Modular backend for AI-based resume-job matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.2"
]

[tool.setuptools]
packages = ["app"]
